--- a/src/app/left-menu/left-menu.component.html
+++ b/src/app/left-menu/left-menu.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-12">
             <div class="list-group left-menu-border" id="list-tab" role="tablist">
-                <a *ngFor="let categoria of categorias" class="list-group-item list-group-item-action" [ngClass]="categoria.id == idCategoria ? 'active' : ''" [id]="categoria.id" data-toggle="list" role="tab" [routerLink]="['/categoria', categoria.id ]">{{categoria.categoria}}</a>
+                <a #lista *ngFor="let categoria of categorias" class="list-group-item list-group-item-action" [ngClass]="categoria.id == categoriasService.alteraLeftMenu ? 'active' : ''" [id]="categoria.id" data-toggle="list" role="tab" [routerLink]="['/categoria', categoria.id ]">{{categoria.categoria}}</a>
             </div>
         </div>
     </div>
