--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,13 @@
-<div class="container">
-    <form>
-        <div class="form-group">
-          <label for="exampleInputEmail1">E-mail</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="teste@email.com">
-        </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Senha</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="******">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+<div class="container col-md-6">
+    
+  <div class="form-group">
+    <label for="email">E-mail</label>
+    <input [(ngModel)]="usuario.email" type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="teste@email.com">
+  </div>
+  <div class="form-group">
+    <label for="senha">Senha</label>
+    <input [(ngModel)]="usuario.senha" type="password" class="form-control" id="senha" placeholder="******">
+  </div>
+  <button type="submit" class="btn btn-primary" (click)="fazerLogin()">Login</button>
+
 </div>
